# gai

./: .gai.yaml  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: mcp-contexto.mdc
.gai/: .gai.yaml  gai-rules.md
.github/workflows/: tests.yaml
api/: __init__.py  github_api.py  gitlab_api.py  groq_api.py
docs/: customizing-ai-rules.md  source-code-overview.md  testing-guidelines.md
gai/: main.py
gai/api/: __init__.py  github_api.py  gitlab_api.py  groq_api.py  hugging_client.py  ollama_client.py  token_counter.py
gai/src/: __init__.py  commit.py  commits.py  config.py  display_choices.py  merge_request.py  merge_requests.py  myconfig.py  prompts.py  token_counter.py  utils.py
gai_tool/: main.py
gai_tool/api/: gemini_client.py  github_api.py  gitlab_api.py
gai_tool/src/: myconfig.py
resources/: commit_video.webm  demo_video.webm  video_demo.webm
src/: commit.py  display_choices.py  merge_request.py  prompts.py
tests/: main.py  test_display_choices.py  test_github_api.py  test_gitlab_api.py  test_merge_requests.py
tests/api/: test_gemini_client.py  test_github_api.py  test_gitlab_api.py  test_token_counter.py
tests/src/: test_commit.py  test_commits.py  test_display_choices.py  test_merge_requests.py  test_myconfig.py  test_myconfig_setup.py
